vlib/v/checker/tests/veb_context_param_mutability.vv
module main

import veb

pub struct Context {
	veb.Context
}

pub struct App {}

pub fn (app &App) index(ctx Context) veb.Result {
	return veb.no_result()
}
